--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "autoprefixer": "^10.4.19",
     "css": "^3.0.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
